fixed alignment issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+p,
+h2 {
+    margin: 0 !important;
+    color: inherit !important;
+}
+
+.btn {
+    text-decoration: none;
+}
